Fix Test dependency for tests

--- a/Project.toml
+++ b/Project.toml
@@ -15,3 +15,9 @@ HomotopyContinuation = "2.15.2"
 LinearAlgebra = "1.11.0"
 Oscar = "1.5.0"
 julia = "1.10"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
